fix de problemas de accesibilidad